Fix for homepage featured content buttons being stuck together visually

--- a/app/assets/stylesheets/components/_drs-buttons.scss
+++ b/app/assets/stylesheets/components/_drs-buttons.scss
@@ -24,3 +24,7 @@
 .btn-block {
   margin-top: 0
 }
+
+.featured-content .btn-block {
+  margin-top: 5px;
+}
